--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Kiran</span>
+                    Hi, I'm <span>Ramandeep kaur</span>
                     A Web Developer.
                 </h1>
                 <p>
@@ -35,7 +35,7 @@
                     Designing and Developing is my passion that drives towards this craft.
                 </p>
                 <div class="btn-con">
-                    <a href="Kiranpreet-Kaur-FlowCV-Resume-20250426.pdf" class="main-btn">
+                    <a href="Ramandeep-Kaur-FlowCV-Resume-20250426.pdf" class="main-btn">
                         <span class="btn-text"">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -52,7 +52,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Hi! I'm Kiran, a Computer Science student and passionate web developer.
+                        Hi! I'm ramandeep, a Computer Science student and passionate web developer.
                         I love creating clean, user-friendly websites using HTML, CSS, Bootstrap, and JavaScript.
                     
                     </p>
@@ -131,7 +131,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2023-2027..</p>
-                    <h5>B.tech CSE <span>Pursuing</span></h5>
+                    <h5>BCA CSE <span>Pursuing</span></h5>
                     <p>
                        Akal University Talwandi Sabo(Punjab) <br>
                        GPA- 9.7
@@ -285,7 +285,7 @@
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
                                     <p>
-                                        <span>kiranpreetkaursandhu@gmail.com</span>
+                                        <span>r17017336@gmail.com</span>
                                     </p>
                                 </div>
                                 
@@ -340,7 +340,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="Kiranpreet-Kaur-FlowCV-Resume-20250426.pdf" class="main-btn">
+                                <a href="Rmandeep-Kaur-FlowCV-Resume-20250426.pdf" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
